force-app/main/default/objects/ER_Store_Authorization__c/ER_Store_Authorization__c.object-meta.xml
<CustomObject>
    <label>Store Authorization</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Store Authorization ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stores Authorization</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>