force-app/main/default/objects/ER_Store_Authorization__c/fields/ER_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>ER_Behaviour__c</fullName>
    <label>Behaviour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCEPT</fullName>
                <default>true</default>
                <label>ACCEPT</label>
            </value>
            <value>
                <fullName>DECLINE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>