force-app/main/default/objects/ER_Store_Authorization__c/fields/ER_Loop__c.field-meta.xml
<CustomField>
    <fullName>ER_Loop__c</fullName>
    <label>Loop</label>
    <referenceTo>ER_Loop__c</referenceTo>
    <relationshipLabel>Stores Authorization</relationshipLabel>
    <relationshipName>Stores_Authorization</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>