force-app/main/default/objects/ER_Store_Authorization__c/fields/ER_Store__c.field-meta.xml
<CustomField>
    <fullName>ER_Store__c</fullName>
    <label>Store</label>
    <referenceTo>ER_Store__c</referenceTo>
    <relationshipLabel>Stores Authorization</relationshipLabel>
    <relationshipName>Stores_Authorization</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>