force-app/main/default/objects/ER_Store_Authorization__c/fields/ERAT_MID__c.field-meta.xml
<CustomField>
    <fullName>ERAT_MID__c</fullName>
    <formula>ER_Store__r.ERAT_MIDs__c</formula>
    <label>MID</label>
    <type>Text</type>
</CustomField>