force-app/main/default/objects/ER_Store_Authorization__c/fields/ERAT_StoreStatus__c.field-meta.xml
<CustomField>
    <fullName>ERAT_StoreStatus__c</fullName>
    <formula>TEXT(ER_Store__r.AT_Status__c)</formula>
    <label>Store Status</label>
    <type>Text</type>
</CustomField>