force-app/main/default/objects/ER_Store_Authorization__c/fields/External_SA_ID__c.field-meta.xml
<CustomField>
    <fullName>External_SA_ID__c</fullName>
    <externalId>true</externalId>
    <label>External SA ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>