force-app/main/default/objects/ER_Store_Authorization__c/fields/UniqueStoreLoopRelation__c.field-meta.xml
<CustomField>
    <fullName>UniqueStoreLoopRelation__c</fullName>
    <label>UniqueStoreLoopRelation</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>