force-app/main/default/objects/ER_Store_Authorization__c/listViews/Full_list.listView-meta.xml
<ListView>
    <fullName>Full_list</fullName>
    <columns>NAME</columns>
    <columns>ER_Store__c</columns>
    <columns>ER_Loop__c</columns>
    <columns>ER_Behaviour__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ER_Loop__c</field>
        <operation>startsWith</operation>
        <value>AP</value>
    </filters>
    <label>Full list</label>
</ListView>